[package]
name = "publib"
edition = "2021"
version = "0.0.1"

[dependencies]
anyhow = "^1"
tokio = { version = "^1.29.1", features = ["full"] }
sqlx = { version = "^0.7.1", features = ["runtime-tokio-rustls", "sqlite"] }
serde_json = "^1"
serde = "^1"
serde_derive = "^1"
xxhash-rust = { version = "^0.8.6", features = ["xxh3"] }
