[package]
name = "publib"
edition = "2021"
version = "0.0.2"

[dependencies]
anyhow = "^1"
async-trait = "0.1.72"
async-walkdir = "0.2.0"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
sqlx = { version = "^0.7.1", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "^1.29.1", features = ["fs"] }
xxhash-rust = { version = "^0.8.6", features = ["xxh3"] }
